<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextProcess"
    android:background="@color/forlist">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_cam_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="43dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_btn"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/switch_icon"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:src="@drawable/switch_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dest_lang"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detected_lang"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/dest_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/switch_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/detected_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switch_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/backbtn"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/trns_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/translate_btn_border"
        android:text="@string/translate_btn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_translated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_cam_text" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_cam_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border_for_text_fields"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/trns_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <EditText
            android:id="@+id/text_from_cam"
            android:layout_width="0dp"
            android:layout_height="0dp"


            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/text_for_cam"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollbars="vertical"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/copy_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/copy_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/copy_btn_border"
            android:src="@drawable/copy_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_from_cam"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/delete_all_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/copy_btn_border"
            android:src="@drawable/delete_all_btn"
            app:layout_constraintBottom_toBottomOf="@+id/text_from_cam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00999999" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_translated"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_for_text_fields"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trns_btn">

        <EditText
            android:id="@+id/translated"
            android:layout_width="0dp"
            android:layout_height="0dp"


            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/translated_text"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollbars="vertical"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/copy_btn_in_trns"
            app:layout_constraintStart_toStartOf="@id/layout_translated"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/copy_btn_in_trns"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/copy_btn_border"
            android:src="@drawable/copy_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/translated"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/delete_all_btn_trns"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/copy_btn_border"
            android:src="@drawable/delete_all_btn"
            app:layout_constraintBottom_toBottomOf="@+id/translated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00999999" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>